--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 <h2>Queen Laundry Premium</h2>
                 <p>Aneka Produk Layanan Laundry</p>
                 <figure>
-                    <img src="logobrand.jpEg" alt="" height="200">
+                    <img src="logobrand.jpeg" alt="" height="200">
                     <figcaption>Logo Queen Laundry</figcaption>
                 </figure>
             </header>
